src/objects/FieloCMS__Site__c.object
<CustomObject>
    <description>A Fielo Site is a content and structure administrator for multiple Salesforce Sites.</description>
    <fields>
        <fullName>FieloCMS__Layout__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Default Layout</description>
        <label>Layout</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Id</field>
                <operation>equals</operation>
                <valueField>FieloCMS__Layout__c.FieloCMS__Site__r.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FieloCMS__Layout__c</referenceTo>
        <relationshipLabel>Sites</relationshipLabel>
        <relationshipName>Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloCMS__PluginCSS__c</fullName>
        <label>Plugin&apos;s CSS</label>
        <length>1200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloCMS__PluginJS__c</fullName>
        <label>Plugin&apos;s Javascript</label>
        <length>1200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloCMS__SiteDomain__c</fullName>
        <label>Site Domain</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FieloCMS__SiteId__c</fullName>
        <label>Salesforce Site</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Site</label>
    <nameField>
        <label>Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>